# Sockets-CPP

./: CMakeLists.txt  Makefile
include/sockets/: Append.hpp  Command.hpp  Echo.hpp  Listener.hpp
src/: Append.cpp  Echo.cpp  Listener.cpp  client.cpp  server.cpp
